--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -1,14 +1,10 @@
-#summary Default side bar
-
   * [Main Overview]
   * [RepositorySetupInstructions Getting Started]
- 
-  * [Folders Folders]
+  * Folders Folders
     * [FolderProjects Sources\Projects]
     * [FolderProjectsLibs Sources\Projects\Libs]
     * [FolderLibs Sources\Libs]
-
-  * [Projects Projects]
+  * Projects
     * [STM32EclipseTemplate STM32 Eclipse Template]
     * [STM32WinUSBCommLibrary STM32 WinUSBComm Library]
     * [STM32WinUSBCommDemo STM32 WinUSBComm Demo]
