Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -1,6 +1,6 @@
   * [Main Overview]
   * [RepositorySetupInstructions Getting Started]
-  * Folders Folders
+  * Folders
     * [FolderProjects Sources\Projects]
     * [FolderProjectsLibs Sources\Projects\Libs]
     * [FolderLibs Sources\Libs]
