--- a/wiki/STM32WinUSBCommLibrary.wiki
+++ b/wiki/STM32WinUSBCommLibrary.wiki
@@ -1,6 +1,8 @@
 #summary USB communication library to use with WinUSB
 
+== Device ==
 In firmware the library resides above user's USB driver implementation and below user'application code. See the comments in [https://code.google.com/p/found-bits/source/browse/trunk/Sources/Projects/Libs/WinUSBComm/WinUSBComm.h WinUSBComm.h].
+=== USB driver ===
 In general the USB implementation must call
 {{{
 void WinUSBComm_In();
@@ -32,3 +34,15 @@ The USB implementation must call
 uint16_t WinUSBComm_Control(uint8_t byRequest, uint8_t **ppData);
 }}}
 when receives control requests for WinUSBComm interface. Function returns the length of data and pointer to data associated with request ID. It also changes the internal state of the WinUSBComm accordingly. The control requests are made up for library and defined in [https://code.google.com/p/found-bits/source/browse/trunk/Sources/Projects/Libs/WinUSBComm/WinUSBCommShared.h WinUSBCommShared.h]. The file is shared between host and device implementation.
+=== Application ===
+The WinUSBComm must be polled constantly with calls to:
+{{{
+void WinUSBComm_ProcessNewData();
+}}}
+This function will call back the
+{{{
+void WinUSBComm_OnNewData();
+}}}
+if new data packet was received.
+This is not single USB data packet. This is a larger packet received with more USB data packets. The max size of this packet is WinUSBComm buffer size. It can be changed by user. Library has a buffer size request control through which the host learns about the max buffer size.
+== Host ==
