--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -8,3 +8,4 @@
     * [STM32EclipseTemplate STM32 Eclipse Template]
     * [STM32WinUSBCommLibrary STM32 WinUSBComm Library]
     * [STM32WinUSBCommDemo STM32 WinUSBComm Demo]
+    * [STM32F4WinUSBComm STM32F4 WinUSBComm Demo]
