Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -9,3 +9,4 @@
     * [STM32WinUSBCommLibrary STM32 WinUSBComm Library]
     * [STM32WinUSBCommDemo STM32 WinUSBComm Demo]
     * [STM32F4WinUSBComm STM32F4 WinUSBComm Demo]
+    * [CommLib Libs\Comm]
