--- a/wiki/EclipseConfig.wiki
+++ b/wiki/EclipseConfig.wiki
@@ -20,5 +20,13 @@ This might be useful when setting up Eclipse
      -vm
      C:\Program Files\Java\jre7\bin
      }}}
+     *UPDATE*
+     New path for latest Java:
+     {{{
+     -vm
+     C:/Program Files/Java/jre1.8.0_25/bin/server
+     }}}
+     Add to the end of file for Eclipse Luna.
+     (Also added path to folder with javaw.exe at the beginning of %PATH%. Not sure if it helps.)
    # Run Eclipse.
    # Pin created icon to taskbar.
